Added the new "AmazonGenerationReportsTrigger" command. It logins (with and without cookies) to the Amazon Advertising Portal, gets URLs of profiles from account menu, but doesn't change marketplace for reading account URLs of Canada.

--- a/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
+++ b/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
@@ -74,6 +74,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\AmazonAdvertisingProfileHelper.cs" />
     <Compile Include="Helpers\SeleniumLogger.cs" />
     <Compile Include="PageActions\AmazonLoginPageObjects.cs" />
     <Compile Include="PDA\AmazonConsoleManagerUtility.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="PDA\PageActions\AmazonPdaPageObjects.cs" />
     <Compile Include="PDA\PdaDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GenerationReportsTrigger\AmazonReportGenerator.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\Constants\ResponseDataConstants.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\VcdComposingReportDataHelper.cs" />
     <Compile Include="VCD\Helpers\VcdLoginManager.cs" />
