--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -268,6 +268,13 @@
     <add key="VCD_ExtractDailyDataAttemptCount" value="5"/>
     <add key="VCD_IntervalBetweenUnsuccessfulAndNewRequestsInMinutes" value="30"/>
     <add key="VCD_MaxPageSizeForReport" value="10000"/>
+    <add key="GenerationReports_EMail" value="" />
+    <add key="GenerationReports_EMailPassword" value="" />
+    <add key="GenerationReports_CookiesDirectoryName" value="GenerationReports_Cookies" />
+    <add key="GenerationReports_WaitPageTimeoutInMinutes" value="30" />
+    <add key="GenerationReports_MaxRetryAttempts" value="10" />
+    <add key="GenerationReports_PauseBetweenAttemptsInSeconds" value="1" />
+    <add key="GenerationReports_IntervalBetweenUnsuccessfulAndNewRequestsInMinutes" value="10"/>
     <!--Syncher sql scripts configuration -->
     <add key="VCD_SyncScriptPath" value="SQL\VCD"/>
     <add key="VCD_SyncScriptName" value="SyncVcdAnalyticTable.sql"/>
