--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -145,6 +145,9 @@
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.Designer.cs">
       <DependentUpon>201909270822065_Mig_Affiliate_AccountManager.cs</DependentUpon>
     </Compile>
+    <Compile Include="SpecialPlatformsDataProviders\Adform\AdformWebPortalDataService.cs" />
+    <Compile Include="SpecialPlatformsDataProviders\Adform\IAdformWebPortalDataService.cs" />
+    <Compile Include="SpecialPlatformsDataProviders\Adform\Models\AdformLatestsInfo.cs" />
     <Compile Include="SpecialPlatformsDataProviders\DBM\DbmWebPortalDataService.cs" />
     <Compile Include="SpecialPlatformsDataProviders\DBM\IDbmWebPortalDataService.cs" />
     <Compile Include="SpecialPlatformsDataProviders\DBM\Models\DbmLatestsInfo.cs" />
