--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Areas\ClientAdmin\ClientAdminAreaRegistration.cs" />
     <Compile Include="Areas\ClientAdmin\Controllers\ClientReportsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\ActionsController.cs" />
+    <Compile Include="Areas\ProgAdmin\Controllers\Adform\AdformController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\CampStatsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\DailySummariesController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\DBM\DbmController.cs" />
@@ -277,6 +278,7 @@
     <Compile Include="Areas\ProgAdmin\Controllers\StatsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\TDadsController.cs" />
     <Compile Include="Areas\ProgAdmin\Models\AccountMaintenanceVM.cs" />
+    <Compile Include="Areas\ProgAdmin\Models\Adform\AdformLatestsInfoVm.cs" />
     <Compile Include="Areas\ProgAdmin\Models\CampaignPacingVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\DailySummariesVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\DashboardVM.cs" />
@@ -1217,6 +1219,7 @@
     <Content Include="Areas\ProgAdmin\Views\Facebook\ActionTotals.cshtml" />
     <Content Include="Areas\Cake\Views\Advertisers\ShowStats.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\DBM\Latests.cshtml" />
+    <Content Include="Areas\ProgAdmin\Views\Adform\Latests.cshtml" />
     <None Include="Properties\PublishProfiles\dagents_vm_staging.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\DayOfWeek.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DateTime.cshtml" />
