DIRAGBA-341 Admin Portal: created page for new YAM job

--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -276,6 +276,7 @@
     <Compile Include="Areas\ProgAdmin\Controllers\ReportsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\StatsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\TDadsController.cs" />
+    <Compile Include="Areas\ProgAdmin\Controllers\YAM\YamController.cs" />
     <Compile Include="Areas\ProgAdmin\Models\AccountMaintenanceVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\CampaignPacingVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\DailySummariesVM.cs" />
@@ -289,6 +290,7 @@
     <Compile Include="Areas\ProgAdmin\Models\SpecialPlatformSummariesVm.cs" />
     <Compile Include="Areas\ProgAdmin\Models\StatsGaugeVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\TDStatsVM.cs" />
+    <Compile Include="Areas\ProgAdmin\Models\YAM\YamLatestsInfoVm.cs" />
     <Compile Include="Areas\ProgAdmin\ProgAdminAreaRegistration.cs" />
     <Content Include="Areas\ProgAdmin\Views\Campaigns\Dashboard.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Reports\ReportViewer.cshtml" />
@@ -1217,6 +1219,7 @@
     <Content Include="Areas\ProgAdmin\Views\Facebook\ActionTotals.cshtml" />
     <Content Include="Areas\Cake\Views\Advertisers\ShowStats.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\DBM\Latests.cshtml" />
+    <Content Include="Areas\ProgAdmin\Views\YAM\Latests.cshtml" />
     <None Include="Properties\PublishProfiles\dagents_vm_staging.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\DayOfWeek.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DateTime.cshtml" />
