DIRAGBA-345 refactoring code

--- a/3/API/Apple/Apple.csproj
+++ b/3/API/Apple/Apple.csproj
@@ -55,9 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppleAdsUtility.cs" />
-    <Compile Include="AppleLogger.cs" />
     <Compile Include="Entities\AppleReportingResponse.cs" />
     <Compile Include="HelperClasses.cs" />
+    <Compile Include="Logger\AppleLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
