DIRAGBA-358 Impement a job to process data from OrganicNewKeywords table

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -11,6 +11,7 @@
     <add name="ClientPortalProgContext" connectionString="" providerName="System.Data.SqlClient" />
     <add name="ClientPortalSearchContext" connectionString="" providerName="System.Data.SqlClient" />
     <add name="DAContext" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="DAData" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
@@ -273,6 +274,12 @@
     <add key="VCD_SyncScriptPath" value="SQL\VCD"/>
     <add key="VCD_SyncScriptName" value="SyncVcdAnalyticTable.sql"/>
 
+    <!--Amazon DPA sql scripts configuration-->
+    <add key="DPA_ScriptPath" value="SQL\DPA"/>
+    <add key="DPA_EnrichBrandVolumes" value="EnrichBrandVolumes.sql"/>
+    <add key="DPA_EnrichProductVolumes" value="EnrichProductVolumes.sql"/>
+    <add key="DPA_EnrichTotalVolumes" value="EnrichProductVolumes.sql"/>
+    
     <!--Failed Jobs Notifications Configuration -->
     <add key="AzureSendGridApiKey" value="" />
     <add key="JEM_JobFailed_ToEmails" value="" />  
