DIRAGBA-358 Fix pr issues

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -278,7 +278,7 @@
     <add key="DPA_ScriptPath" value="SQL\DPA"/>
     <add key="DPA_EnrichBrandVolumes" value="EnrichBrandVolumes.sql"/>
     <add key="DPA_EnrichProductVolumes" value="EnrichProductVolumes.sql"/>
-    <add key="DPA_EnrichTotalVolumes" value="EnrichProductVolumes.sql"/>
+    <add key="DPA_EnrichTotalVolumes" value="EnrichTotalVolumes.sql"/>
     
     <!--Failed Jobs Notifications Configuration -->
     <add key="AzureSendGridApiKey" value="" />
