--- a/1/EomTool/EomToolWeb/packages.config
+++ b/1/EomTool/EomToolWeb/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.7.2" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
@@ -24,6 +25,8 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
   <package id="Ninject.Extensions.Interception" version="3.3.0" targetFramework="net452" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Packaging" version="4.5.0" targetFramework="net461" />
   <package id="System.Linq.Dynamic.Core" version="1.0.8.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="TinyMCE" version="3.4.7" targetFramework="net40" />
