DIRAGBA-381 Add retry mechanism for Cake job

--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -566,6 +566,7 @@
     <Compile Include="Etl\CakeMarketing\DALoaders\DAEventConversionLoader.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Etl\CakeMarketing\Exceptions\CakeFailedEtlException.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\AffiliatesExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\EventConversionExtracter.cs">
       <SubType>Code</SubType>
