--- a/3/DirectAgents.Web/DirectAgents.Web/packages.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net461" />
+  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="HttpAuthModule" version="2.2.2.0" targetFramework="net45" />
   <package id="KendoGridBinder" version="2.0.0" targetFramework="net452" />
