DIRAGBA-390 Fix config files

--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -8,6 +8,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler" />
     <section name="httpAuthModule" type="System.Configuration.NameValueFileSectionHandler" />
+    <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
@@ -22,6 +23,7 @@
     <add name="DirectAgents.Domain.Entities.Wiki.WikiContext" connectionString="DirectAgents.Domain.Entities.Wiki.WikiContext_ConnectionString" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework codeConfigurationType="DirectAgents.Domain.Contexts.Configurations.AzureConfiguration, DirectAgents.Domain">
+  <entityFramework codeConfigurationType="CakeExtracter.Data.Configurations.AzureConfiguration, CakeExtracter">
     <contexts>
       <!--<context type="DirectAgents.Domain.Contexts.DAContext, DirectAgents.Domain" disableDatabaseInitialization="true"/>-->
     </contexts>
