--- a/3/API/DBM/packages.config
+++ b/3/API/DBM/packages.config
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Google.Apis" version="1.33.1" targetFramework="net452" />
-  <package id="Google.Apis.Auth" version="1.33.1" targetFramework="net452" />
-  <package id="Google.Apis.Core" version="1.33.1" targetFramework="net452" />
-  <package id="Google.Apis.DoubleClickBidManager.v1" version="1.32.2.1141" targetFramework="net452" />
+  <package id="Google.Apis" version="1.45.0" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.45.0" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.45.0" targetFramework="net461" />
+  <package id="Google.Apis.DoubleClickBidManager.v1" version="1.45.0.1901" targetFramework="net461" />
+  <package id="Google.Apis.DoubleClickBidManager.v1_1" version="1.45.0.1901" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.3" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.3" targetFramework="net461" />
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net461" />
   <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net461" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
