--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -10,11 +10,12 @@
   <package id="EPPlus" version="4.5.2.1" targetFramework="net452" />
   <package id="Google.Ads.Common" version="9.5.1" targetFramework="net461" />
   <package id="Google.AdWords" version="24.4.0" targetFramework="net461" />
-  <package id="Google.Apis" version="1.36.1" targetFramework="net461" />
+  <package id="Google.Apis" version="1.45.0" targetFramework="net461" />
   <package id="Google.Apis.Analytics.v3" version="1.32.2.1163" targetFramework="net452" />
-  <package id="Google.Apis.Auth" version="1.36.1" targetFramework="net461" />
-  <package id="Google.Apis.Core" version="1.36.1" targetFramework="net461" />
-  <package id="Google.Apis.DoubleClickBidManager.v1" version="1.32.2.1141" targetFramework="net452" />
+  <package id="Google.Apis.Auth" version="1.45.0" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.45.0" targetFramework="net461" />
+  <package id="Google.Apis.DoubleClickBidManager.v1" version="1.45.0.1901" targetFramework="net461" />
+  <package id="Google.Apis.DoubleClickBidManager.v1_1" version="1.45.0.1901" targetFramework="net461" />
   <package id="Google.Apis.Storage.v1" version="1.32.2.1159" targetFramework="net452" />
   <package id="ManyConsole" version="1.0.0.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net461" />
@@ -31,7 +32,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Mono.Options" version="5.3.0" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
   <package id="Polly" version="6.1.2" targetFramework="net461" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
