--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Entities\CPProg\Adform\AdfMediaType.cs" />
     <Compile Include="Entities\CPProg\Adform\Summaries\AdfLineItemSummary.cs" />
     <Compile Include="Entities\CPProg\Facebook\FbReachMetric.cs" />
+    <Compile Include="Entities\CPProg\Roku\RokuSummary.cs" />
     <Compile Include="MigrationsTD\201905311144009_Mig_ErrorEmailSentProperty.cs" />
     <Compile Include="MigrationsTD\201905311144009_Mig_ErrorEmailSentProperty.Designer.cs">
       <DependentUpon>201905311144009_Mig_ErrorEmailSentProperty.cs</DependentUpon>
@@ -152,6 +153,10 @@
     <Compile Include="MigrationsTD\202004021059161_Mig_AmazonAddMediaType.cs" />
     <Compile Include="MigrationsTD\202004021059161_Mig_AmazonAddMediaType.Designer.cs">
       <DependentUpon>202004021059161_Mig_AmazonAddMediaType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MigrationsTD\202004291522109_AddRokuSummaryEntity.cs" />
+    <Compile Include="MigrationsTD\202004291522109_AddRokuSummaryEntity.Designer.cs">
+      <DependentUpon>202004291522109_AddRokuSummaryEntity.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.cs" />
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.Designer.cs">
@@ -1208,6 +1213,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\202004021059161_Mig_AmazonAddMediaType.resx">
       <DependentUpon>202004021059161_Mig_AmazonAddMediaType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\202004291522109_AddRokuSummaryEntity.resx">
+      <DependentUpon>202004291522109_AddRokuSummaryEntity.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
