--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Entities\CPProg\Adform\AdfBaseEntity.cs" />
     <Compile Include="Entities\CPProg\Adform\AdfMediaType.cs" />
     <Compile Include="Entities\CPProg\Adform\Summaries\AdfLineItemSummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\FbCampaignReachMetric.cs" />
     <Compile Include="Entities\CPProg\Facebook\FbReachMetric.cs" />
     <Compile Include="Entities\CPSearch\SearchVideoDailySummary.cs" />
     <Compile Include="MigrationsTD\201905311144009_Mig_ErrorEmailSentProperty.cs" />
@@ -153,6 +154,14 @@
     <Compile Include="MigrationsTD\202004021059161_Mig_AmazonAddMediaType.cs" />
     <Compile Include="MigrationsTD\202004021059161_Mig_AmazonAddMediaType.Designer.cs">
       <DependentUpon>202004021059161_Mig_AmazonAddMediaType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MigrationsTD\202005081449565_CreateReachCampaignEntity.cs" />
+    <Compile Include="MigrationsTD\202005081449565_CreateReachCampaignEntity.Designer.cs">
+      <DependentUpon>202005081449565_CreateReachCampaignEntity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MigrationsTD\202005081530121_UpdateFrequencyTypeCampaignReach.cs" />
+    <Compile Include="MigrationsTD\202005081530121_UpdateFrequencyTypeCampaignReach.Designer.cs">
+      <DependentUpon>202005081530121_UpdateFrequencyTypeCampaignReach.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.cs" />
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.Designer.cs">
@@ -1209,6 +1218,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\202004021059161_Mig_AmazonAddMediaType.resx">
       <DependentUpon>202004021059161_Mig_AmazonAddMediaType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\202005081449565_CreateReachCampaignEntity.resx">
+      <DependentUpon>202005081449565_CreateReachCampaignEntity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\202005081530121_UpdateFrequencyTypeCampaignReach.resx">
+      <DependentUpon>202005081530121_UpdateFrequencyTypeCampaignReach.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
